--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button class="start" id="começa-jogo">Play</button>
         </div> 
             <div class="game-board">
+                <img src="imagens/nuvem.png" alt="" id="cloud">
                 <div class="boneco">
                 </div>
                 <div class="obstaculo">
