--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <div id="campo">
-        
         <div class="buttons">
             <button class="reset" id="reseta-jogo">Reset</button>
             <button class="start" id="começa-jogo">Play</button>
         </div> 
             <div class="game-board">
+                <img src="imagens/Moon.png" alt="" id="moon">
+                <div class="shadow-moon"></div>
                 <img src="imagens/nuvem.png" alt="" id="cloud">
                 <div class="boneco">
                 </div>
