--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
             <div class="game-board">
                 <img src="imagens/Moon.png" alt="" id="moon">
                 <div class="shadow-moon"></div>
-                <img src="imagens/nuvem.png" alt="" id="cloud">
+                <img src="imagens/nuvem.png" alt="" class="cloud2">
+                <img src="imagens/nuvem.png" alt="" class="cloud">
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
                 <div class="boneco">
                 </div>
                 <div class="obstaculo">
