--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <div class="shadow-moon"></div>
                 <img src="imagens/nuvem.png" alt="" class="cloud2">
                 <img src="imagens/nuvem.png" alt="" class="cloud">
-                <div class="star"></div>
-                <div class="star"></div>
-                <div class="star"></div>
-                <div class="star"></div>
-                <div class="star"></div>
+                <div class="star star1"></div>
+                <div class="star star2"></div>
+                <div class="star star3"></div>
+                <div class="star star4"></div>
+                <div class="star star5"></div>
                 <div class="boneco">
                 </div>
                 <div class="obstaculo">
