--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button class="reset" id="reseta-jogo">Reset</button>
             <button class="start" id="começa-jogo">Play</button>
         </div> 
-        <div class="distancia">Pontos:</div>
+        <div class="distancia">Pontos:</div> <div class="recorde">Recorde:</div>
             <div class="game-board">
                 <img src="imagens/Moon.png" alt="" id="moon">
                 <div class="shadow-moon"></div>
