--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
                 <div class="shadow-moon"></div>
                 <img src="imagens/nuvem.png" alt="" class="cloud2">
                 <img src="imagens/nuvem.png" alt="" class="cloud">
-                <div class="star star1"></div>
+                <div class="star star1" id="estrela"></div>
                 <div class="star star2"></div>
                 <div class="star star3"></div>
                 <div class="star star4"></div>
@@ -32,5 +32,5 @@
         
     </div>
 </body>
-<script src="script.js"></script>
+<script src="src/script.js"></script>
 </html>
